fix: Change header logo size to fix alignment

--- a/style.css
+++ b/style.css
@@ -12,8 +12,9 @@
 
 .nav {
   display: flex;
+  flex-flow: row nowrap;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
 }
 
 .nav ul {
@@ -148,6 +149,7 @@
 /* Styles */
 
 .header-logo {
+  width: 400px;
   text-decoration: none;
   font-size: 24px;
   color: var(--hero-text);
